--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "nodemailer": "^6.6.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
