--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.6.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/handlebars": "^4.1.0",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
